samples/_failures_safe/1761536952_660ce7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eb6472c.c: In function ‘main’:
./samples/SAFE/__tmp_2eb6472c.c:150:5: error: expected expression at end of input
  150 |     if (
      |     ^~
./samples/SAFE/__tmp_2eb6472c.c:150:5: error: expected declaration or statement at end of input
